# llomps_fullstack_project

./: .gitignore  README.md  main.py  pyproject.toml  way_of_working.md
backend/app/: main.py
backend/app/agent/: travel_agent.py
backend/app/api/routes/: chat.py  health.py  recommendation.py
backend/app/core/: config.py  constants.py  mlflow_utils.py
backend/app/middlewares/: logging_middleware.py
backend/app/monitoring/: register_prompts.py  run_evaluation.py
backend/app/schemas/: chat.py  place.py  recommendations.py
backend/app/services/: content_service.py  google_maps_service.py  planner_service.py  recommendation_service.py
backend/data/: scandinavia_data.json
backend/tests/: test_content_service.py  test_health.py
frontend/src/: app.py
frontend/src/components/: chat_interface.py  trip_form.py
frontend/src/data/: city_data.py  mock_data.py
frontend/src/services/: mock_llm.py
