[project]
name = "llomps-fullstack-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.86.0",
    "streamlit>=1.56.0",
]
